--- a/app/views/pages/_payment_details.html.erb
+++ b/app/views/pages/_payment_details.html.erb
@@ -130,7 +130,7 @@
                             <div class="hidden lg:block"></div>
                             <div class="grid grid-cols-2 lg:grid-cols-5 col-span-2 lg:col-span-1">
                                 <div class="col-span-1 lg:col-span-2 pe-3 lg:pe-0">
-                                    <button type="button" class="btn-dark-checkout-outline rounded-xl md:me-3 h-12 flex items-center w-full mt-5 lg:mt-0 lg:mt-0 order-4 lg:order-3 flex justify-evenly">
+                                    <button type="button" class="btn-dark-checkout-outline rounded-xl md:me-3 h-12 flex items-center w-full lg:mt-0 order-4 lg:order-3 flex justify-evenly">
                                         Cancel
                                     </button>
                                 </div>
@@ -264,7 +264,7 @@
             <div class="w-full border border-dark-custom rounded-xl p-5">
                 <div class="grid grid-cols-2">
                     <div>
-                        <p class="font-medium w-[75%]">
+                        <p class="font-medium lg:w-[75%]">
                             Items for delivery
                         </p>
                     </div>
@@ -273,9 +273,12 @@
                             Show Details
                         </a>
                     </div>
-                    <div class="col-span-2 bg-grey-custom flex justify-center items-center rounded-md overflow-hidden lg:w-[100px] aspect-square p-2 mt-3">   
-                        <%= image_tag 'peak.png', class:"w-[50%] lg:w-[80px]" %>
+                    <div class="col-span-2 grid grid-cols-2 lg:grid-cols-4 gap-3 mt-3">
+                        <a href="" class="bg-grey-custom flex justify-center items-center rounded-md overflow-hidden aspect-square p-2">   
+                            <img class="" src="/assets/peak-3108e517.png">
+                        </a>
                     </div>
+                    
 
                 </div>
             </div>
