--- a/app/views/pages/_review_order_page.html.erb
+++ b/app/views/pages/_review_order_page.html.erb
@@ -175,7 +175,7 @@
             <div class="w-full border border-dark-custom rounded-xl p-5">
                 <div class="grid grid-cols-2">
                     <div>
-                        <p class="font-medium w-[75%]">
+                        <p class="font-medium lg:w-[75%]">
                             Items for delivery
                         </p>
                     </div>
@@ -184,8 +184,10 @@
                             Show Details
                         </a>
                     </div>
-                    <div class="bg-grey-custom flex justify-center items-center rounded-md overflow-hidden w-[100px] aspect-square p-2 mt-3">   
-                        <%= image_tag 'peak.png', class:"w-[80px]" %>
+                    <div class="col-span-2 grid grid-cols-2 lg:grid-cols-4 gap-3 mt-3">
+                        <a href="" class="bg-grey-custom flex justify-center items-center rounded-md overflow-hidden aspect-square p-2">   
+                            <img class="" src="/assets/peak-3108e517.png">
+                        </a>
                     </div>
 
                 </div>
