--- a/app/views/shared/_navbar_menu.html.erb
+++ b/app/views/shared/_navbar_menu.html.erb
@@ -1,5 +1,5 @@
 <nav class="at-top border-gray-200 fixed w-full z-20" data-controller="navbar" data-navbar-target="nav">
-    <div class="flex flex-wrap items-center justify-between mx-auto px-4 py-5 lg:pt-10 lg:pb-5 pb-0 xl:w-[90%]">
+    <div class="flex flex-wrap items-center justify-between mx-auto px-4 py-5 lg:pt-5 lg:pb-5 xl:w-[90%]">
         <div class="flex flex-row items-center">
             <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
                 <%= image_tag "peak_logo_red.svg", alt: "EasyReg Logo" , class: "h-full object-contain" %>
@@ -31,7 +31,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
                     </svg>
                 </div>
-                <input type="text" id="search-navbar" class="block w-full p-2 ps-10 text-sm text-dark border border-dark rounded-lg bg-white " placeholder="">
+                <input type="text" id="search-navbar" class="block w-full p-2 ps-10 text-sm text-dark border border-dark rounded-lg bg-white" placeholder="">
             </div>
             <a class="hidden lg:block" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 ms-4">
