--- a/app/views/pages/_product_show_page.html.erb
+++ b/app/views/pages/_product_show_page.html.erb
@@ -29,11 +29,11 @@
             </p>
             <div class="pt-10 ">
                 <form class="flex flex-row flex-wrap lg:flex-nowrap justify-between items-end w-full lg:w-[55%]">
-                    <div class="lg:me-5 w-[33%] flex lg:justify-center flex-col order-1">
+                    <div class="lg:me-5 w-[40%] lg:w-[33%] flex lg:justify-center flex-col order-1">
                         <label for="size" class="block mb-2 text-xl font-medium text-gray-700">
                             Size (UK)
                         </label>
-                        <div class="relative w-22 h-12">
+                        <div class="relative w-30 lg:w-22 h-12">
                             <select id="size" name="size"
                                 class="block rounded-xl border-gray-300 w-full h-full">
                                 <option value="1">1</option>
@@ -52,11 +52,11 @@
                         </div>
                     </div>
 
-                    <div class="lg:me-5 w-[33%] flex lg:justify-center flex-col order-2">
+                    <div class="lg:me-5 w-[40%] lg:w-[33%] flex lg:justify-center flex-col order-2">
                         <label for="size" class="block mb-2 text-xl font-medium text-gray-700">
                             Quantity
                         </label>
-                        <div class="relative w-22 h-12">
+                        <div class="relative w-30 lg:w-22 h-12">
                             <select id="quantity" name="quantity"
                                 class="block rounded-xl border-gray-300 w-full h-full">
                                 <option value="1">1</option>
@@ -75,7 +75,7 @@
                         </div>
                     </div>
 
-                    <button type="button" class="btn-peak-red-solid rounded-xl md:me-3 h-12 flex items-center w-full mt-5 lg:mt-0 order-4 lg:order-3">Add To Cart</button>
+                    <button type="button" class="btn-peak-red-solid rounded-xl md:me-3 h-12 flex items-center justify-center w-full mt-5 lg:mt-0 order-4 lg:order-3">Add To Cart</button>
 
                     <button type="button" class="btn-grey-light h-12 flex items-center group order-3 lg:order-4">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" 
@@ -115,7 +115,7 @@
 
                     <div id="accordion-open" data-accordion="open">
                         <h2 id="accordion-open-heading-1">
-                            <button type="button" class="border-t-1 border-black flex items-center justify-between w-full px-5 pb-5 pt-3 font-medium rtl:text-right bg-transparent" data-accordion-target="#accordion-open-body-1" aria-expanded="true" aria-controls="accordion-open-body-1">
+                            <button type="button" class="border-t-1 border-black accordion-button-styling" data-accordion-target="#accordion-open-body-1" aria-expanded="false" aria-controls="accordion-open-body-1">
                                 <span class="flex items-center">
                                     Shipping and Returns
                                 </span>
