--- a/app/views/pages/_regstration_page.html.erb
+++ b/app/views/pages/_regstration_page.html.erb
@@ -1,6 +1,6 @@
 <div class="checkout-container">
     <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-7">
-        <div class="col-span-3 lg:col-span-2 overflow-auto rounded-xl lg:border-0">
+        <div class="col-span-3 lg:col-span-2 overflow-auto rounded-xl lg:border-0 bg-grey-custom">
 
             <div class="w-full rounded-xl p-8">
                 <p class="text-2xl lg:text-4xl font-medium">
@@ -155,24 +155,32 @@
                 </div>
                 <hr class="col-span-2 mt-3 mb-5">
                 <div class="grid grid-cols-8 mt-5">
-                    <div class="col-span-4 mt-5 pe-2">
-                        <button type="button" class="btn-checkout-solid ">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
+                    <div class="col-span-8 lg:col-span-4 mt-5 lg:pe-2 flex items-center">
+                        <button type="button" class="btn-checkout-solid flex items-center ps-5 lg:ps-0 lg:justify-evenly">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4 me-3 lg:me-0">
                                 <path fill-rule="evenodd" d="M11.03 3.97a.75.75 0 0 1 0 1.06l-6.22 6.22H21a.75.75 0 0 1 0 1.5H4.81l6.22 6.22a.75.75 0 1 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd"></path>
                             </svg>
                             Continue Shopping
                         </button>
                     </div>
 
-                    <div class="col-span-2 mt-5">
-                        <button type="button" class="btn-peak-checkout-red-solid w-full">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
+                    <div class="col-span-8 lg:col-span-2 mt-5 flex items-center">
+                        <button type="button" class="btn-peak-checkout-red-solid w-full flex items-center ps-5 lg:ps-0 lg:justify-evenly">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4 me-3 lg:me-0">
                                 <path fill-rule="evenodd" d="M11.03 3.97a.75.75 0 0 1 0 1.06l-6.22 6.22H21a.75.75 0 0 1 0 1.5H4.81l6.22 6.22a.75.75 0 1 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd"></path>
                             </svg>
                             Back
                         </button>
                     </div>
-
+                    <div class="rounded-xl col-span-8 bg-white p-5 mt-6">
+                        <ul class="list-disc px-5">
+                            <li class="text-sm mb-1">Free Shipping on All Deliveries</li>
+                            <li class="text-sm mb-1">Fast Delivery Time</li>
+                            <li class="text-sm mb-1">Visa, Master Card & EFT's Accepted</li>
+                            <li class="text-sm mb-1">Returned and Refund Policy</li>
+                            <li class="text-sm mb-1">Customer Care: online@medicus.co.za</li>
+                        </ul>
+                    </div>
 
                 </div>
             </div>
