--- a/app/views/pages/_blog_show_page.html.erb
+++ b/app/views/pages/_blog_show_page.html.erb
@@ -27,6 +27,46 @@
                     molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
                 </p>
             </div>
+
+            <div class="mt-6 bg-grey-custom rounded-xl p-5">
+                <form>
+                    <div class="relative col-span-2 md:col-span-2">
+                        <textarea
+                            id="standard_waiver"
+                            rows="15"
+                            class="md-input-styling peer h-32 resize-none w-full"
+                            placeholder=" "
+                        ></textarea>
+
+                        <label for="standard_waiver" class="floating-label-textarea transform-gpu">
+                            Comment
+                        </label>
+                    </div>
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 lg:gap-7">
+                        <div class="relative h-[45px] mt-5">
+                            <input type="text" id="comment_first_name" class="md-input-styling peer border border-dark-custom h-[45px] !rounded-lg" placeholder=" ">
+                            
+                            <label for="comment_first_name" class="floating-label">
+                                First Name
+                            </label>
+                        </div>
+
+                        <div class="relative h-[45px] lg:mt-5">
+                            <input type="text" id="comment_last_name" class="md-input-styling peer border border-dark-custom h-[45px] !rounded-lg" placeholder=" ">
+                            
+                            <label for="comment_last_name" class="floating-label">
+                                First Name
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="mt-5">
+                        <button type="button" class="btn-checkout-solid lg:!w-[20%]">
+                            Send Comment
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
         
         <div class="col-span-1">
