Added comments form to the blog show page

--- a/app/views/pages/_product_show_page.html.erb
+++ b/app/views/pages/_product_show_page.html.erb
@@ -28,8 +28,8 @@
                 R1999.00
             </p>
             <div class="pt-10 ">
-                <form class="flex flex-row flex-wrap lg:flex-nowrap justify-between items-end w-full lg:w-[55%]">
-                    <div class="lg:me-5 w-[40%] lg:w-[33%] flex lg:justify-center flex-col order-1">
+                <form class="flex flex-row flex-wrap lg:flex-nowrap lg:justify-between items-end w-full lg:w-[55%]">
+                    <div class="lg:me-5 w-[40%] md:w-[20%] lg:w-[33%] flex lg:justify-center flex-col order-1">
                         <label for="size" class="block mb-2 text-xl font-medium text-gray-700">
                             Size (UK)
                         </label>
@@ -52,7 +52,7 @@
                         </div>
                     </div>
 
-                    <div class="lg:me-5 w-[40%] lg:w-[33%] flex lg:justify-center flex-col order-2">
+                    <div class="lg:me-5 w-[40%] md:w-[20%] lg:w-[33%] flex lg:justify-center flex-col order-2">
                         <label for="size" class="block mb-2 text-xl font-medium text-gray-700">
                             Quantity
                         </label>
@@ -75,9 +75,9 @@
                         </div>
                     </div>
 
-                    <button type="button" class="btn-peak-red-solid rounded-xl md:me-3 h-12 flex items-center justify-center w-full mt-5 lg:mt-0 order-4 lg:order-3">Add To Cart</button>
+                    <button type="button" class="btn-peak-red-solid rounded-xl md:me-3 h-12 flex items-center justify-center lg:w-full mt-5 lg:mt-0 order-4 md:order-3">Add To Cart</button>
 
-                    <button type="button" class="btn-grey-light h-12 flex items-center group order-3 lg:order-4">
+                    <button type="button" class="btn-grey-light h-12 flex items-center group order-3 md:order-4">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" 
                             stroke-width="1.5" stroke="currentColor" 
                             class="size-6 group-hover:stroke-white">
