--- a/app/views/pages/_regstration_page.html.erb
+++ b/app/views/pages/_regstration_page.html.erb
@@ -157,7 +157,7 @@
                 <div class="grid grid-cols-8 mt-5">
                     <div class="col-span-8 lg:col-span-4 mt-5 lg:pe-2 flex items-center">
                         <button type="button" class="btn-checkout-solid flex items-center ps-5 lg:ps-0 lg:justify-evenly">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4 me-3 lg:me-0">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="checkout-button-icons">
                                 <path fill-rule="evenodd" d="M11.03 3.97a.75.75 0 0 1 0 1.06l-6.22 6.22H21a.75.75 0 0 1 0 1.5H4.81l6.22 6.22a.75.75 0 1 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd"></path>
                             </svg>
                             Continue Shopping
@@ -166,7 +166,7 @@
 
                     <div class="col-span-8 lg:col-span-2 mt-5 flex items-center">
                         <button type="button" class="btn-peak-checkout-red-solid w-full flex items-center ps-5 lg:ps-0 lg:justify-evenly">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4 me-3 lg:me-0">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="checkout-button-icons">
                                 <path fill-rule="evenodd" d="M11.03 3.97a.75.75 0 0 1 0 1.06l-6.22 6.22H21a.75.75 0 0 1 0 1.5H4.81l6.22 6.22a.75.75 0 1 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd"></path>
                             </svg>
                             Back
