--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
     <div class="bg-dark-custom rounded-xl grid grid-cols-2 gap-7 ">
        
         <div class="flex flex-col items-center lg:items-start col-span-2 lg:col-span-1 p-10 lg:py-20 lg:ps-25 lg:pe-0">   
-            <%= image_tag 'peak_logo_white.svg', class: "w-[50%] lg:w-[32%]" %>
+            <%= image_tag 'peak_logo_white.svg', class: "w-[50%] md:w-[25%] lg:w-[32%]" %>
             <p class="pt-10 text-center lg:text-start text-white text-[14px]">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
