--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -39,7 +39,7 @@ body {
     }
 
     .page-container {
-        @apply w-[90%] lg:w-[65%] mx-auto pt-10 lg:py-30
+        @apply w-[90%] lg:w-[65%] mx-auto pt-10 md:py-10 lg:py-30
     }
 
     hr {
@@ -134,6 +134,10 @@ body {
 
     .accordion-button-styling {
         @apply flex items-center justify-between w-full px-5 pb-3 pt-3 font-medium rtl:text-right bg-transparent
+    }
+
+    .checkout-button-icons {
+        @apply size-5 me-3 lg:me-1
     }
 
     /* Stylistic Elements */
