--- a/app/views/pages/_blog_show_page.html.erb
+++ b/app/views/pages/_blog_show_page.html.erb
@@ -67,6 +67,23 @@
                     </div>
                 </form>
             </div>
+
+            <div class="mt-6 p-5">
+                <%= image_tag 'peak.png', class:"size-[60px] object-cover rounded-full border-1 border-dark-custom" %>
+                <p class="text-xs italic pt-4">
+                    Christopher Strauss, over 1 year ago
+                </p>
+                <p class="pt-4 text-sm">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    <br>
+                    <br> 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <br>
+                    <br>
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+            </div>
         </div>
         
         <div class="col-span-1">
