--- a/app/views/pages/_review_order_page.html.erb
+++ b/app/views/pages/_review_order_page.html.erb
@@ -6,7 +6,7 @@
         <div class="red-accent-pill-large"></div>
     </div>
     <div class="grid grid-cols-1 md:grid-cols-5 lg:grid-cols-5 gap-7">
-        <div class="col-span-3 lg:col-span-3 overflow-auto rounded-xl lg:border-0">
+        <div class="col-span-3 md:col-span-5 lg:col-span-3 overflow-auto rounded-xl lg:border-0">
 
             <div class="w-full border border-dark-custom rounded-xl p-8 mb-8">
                 <p class="text-xl lg:text-2xl font-medium">
@@ -99,7 +99,7 @@
             </div>
         </div>
 
-        <div class="col-span-3 lg:col-span-2">
+        <div class="col-span-3 md:col-span-5 lg:col-span-2">
             <div class="grid grid-cols-2 bg-grey-custom rounded-xl p-8 mb-8">
                 <p class="text-xl lg:text-2xl font-medium col-span-1">
                     Order Summary
@@ -142,9 +142,9 @@
 
                 <hr class="col-span-2 mt-3 mb-5">
 
-                <div class="lg:pe-2 col-span-2 lg:col-span-1">
-                    <button type="button" class="btn-dark-checkout-outline rounded-xl md:me-3 h-12 flex items-center w-full mt-5 lg:mt-0 order-4 lg:order-3 flex justify-evenly">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+                <div class="md:pe-2 col-span-2 md:col-span-1">
+                    <button type="button" class="btn-dark-checkout-outline rounded-xl md:me-3 h-12 flex items-center w-full mt-5 lg:mt-0 order-4 lg:order-3 flex justify-center lg:justify-evenly">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="checkout-button-icons">
                             <path fill-rule="evenodd" d="M11.03 3.97a.75.75 0 0 1 0 1.06l-6.22 6.22H21a.75.75 0 0 1 0 1.5H4.81l6.22 6.22a.75.75 0 1 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd" />
                         </svg>
                         
@@ -152,9 +152,9 @@
                     </button>
                 </div>
                 
-                <div class="plg:s-2 col-span-2 lg:col-span-1">
-                    <button type="button" class="btn-peak-checkout-red-solid rounded-xl md:me-3 h-12 flex items-center w-full mt-5 lg:mt-0 order-4 lg:order-3 flex justify-evenly">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <div class="lg:ps-2 col-span-2 md:col-span-1">
+                    <button type="button" class="btn-peak-checkout-red-solid rounded-xl md:me-3 h-12 flex items-center w-full mt-5 lg:mt-0 order-4 lg:order-3 flex justify-center lg:justify-evenly">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="checkout-button-icons">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a2.25 2.25 0 0 0-2.25-2.25H15a3 3 0 1 1-6 0H5.25A2.25 2.25 0 0 0 3 12m18 0v6a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 18v-6m18 0V9M3 12V9m18 0a2.25 2.25 0 0 0-2.25-2.25H5.25A2.25 2.25 0 0 0 3 9m18 0V6a2.25 2.25 0 0 0-2.25-2.25H5.25A2.25 2.25 0 0 0 3 6v3" />
                         </svg>
                         Make Payment
