--- a/app/views/pages/_product_show_page.html.erb
+++ b/app/views/pages/_product_show_page.html.erb
@@ -1,3 +1,4 @@
+<% if false %>
 <div class="pod-container">
     <div class="grid grid-cols-2 gap-7">
         <div class="col-span-2 lg:col-span-1 grid grid-cols-2 gap-7">
@@ -138,5 +139,157 @@
         </div>
     </div>
 </div>
+<% end %>
+
+
+<div class="pod-container grid grid-cols-1 lg:grid-cols-2 gap-7">
+  <!-- LEFT: Images -->
+
+  <div class="col-span-1 grid grid-cols-2 gap-3 lg:gap-7">
+        <div class="col-span-2 bg-grey-custom rounded-xl overflow-hidden aspect-square flex items-center justify-center">
+            <%= image_tag 'peak.png', class:"w-[80%]" %>
+        </div>
+        <div class="col-span-1 aspect-square bg-grey-custom rounded-xl overflow-hidden aspect-square flex items-center justify-center">
+            <%= image_tag 'peak.png', class:"w-[80%]" %>
+        </div>
+        <div class="col-span-1 aspect-square bg-grey-custom rounded-xl overflow-hidden aspect-square flex items-center justify-center">
+            <%= image_tag 'peak.png', class:"w-[80%]" %>
+        </div>
+        <div class="col-span-1 aspect-square bg-grey-custom rounded-xl overflow-hidden aspect-square flex items-center justify-center">
+            <%= image_tag 'peak.png', class:"w-[80%]" %>
+        </div>
+        <div class="col-span-1 aspect-square bg-grey-custom rounded-xl overflow-hidden aspect-square flex items-center justify-center">
+            <%= image_tag 'peak.png', class:"w-[80%]" %>
+        </div>
+        <div class="col-span-1 aspect-square bg-grey-custom rounded-xl overflow-hidden aspect-square flex items-center justify-center">
+            <%= image_tag 'peak.png', class:"w-[80%]" %>
+        </div>
+        <div class="col-span-1 aspect-square bg-grey-custom rounded-xl overflow-hidden aspect-square flex items-center justify-center">
+            <%= image_tag 'peak.png', class:"w-[80%]" %>
+        </div>
+  </div>
+
+  <div class="lg:h-screen lg:sticky lg:top-0 col-span-1">
+    <div class="grid grid-cols-2 gap-6 h-full overflow-y-auto lg:ps-6">
+        <div class="flex flex-col col-span-2">
+            <p class="font-extralight">
+                PK - PK-MENS - PKLOUWILLIAMS-SMN01
+            </p>
+            <h2 class="text-[30px] lg:text-start lg:text-[45px] font-semibold mb-4 w-full lg:leading-16">
+                PEAK Basketball Shoes Lou Williams Streetball Master Navy
+            </h2>
+            <p class="product-price-large">
+                R1999.00
+            </p>
+            <div class="pt-10 ">
+                <form class="flex flex-row flex-wrap lg:flex-nowrap lg:justify-between items-end w-full lg:w-[55%]">
+                    <div class="lg:me-5 w-[40%] md:w-[20%] lg:w-[33%] flex lg:justify-center flex-col order-1">
+                        <label for="size" class="block mb-2 text-xl font-medium text-gray-700">
+                            Size (UK)
+                        </label>
+                        <div class="relative w-30 lg:w-22 h-12">
+                            <select id="size" name="size"
+                                class="block rounded-xl border-gray-300 w-full h-full">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                            </select>
+                            <div class='absolute left-[50%] bottom-0 h-full border border-gray-300 w-[0px]'></div>
+                        </div>
+                    </div>
+                    <div class="lg:me-5 w-[40%] md:w-[20%] lg:w-[33%] flex lg:justify-center flex-col order-2">
+                        <label for="size" class="block mb-2 text-xl font-medium text-gray-700">
+                            Quantity
+                        </label>
+                        <div class="relative w-30 lg:w-22 h-12">
+                            <select id="quantity" name="quantity"
+                                class="block rounded-xl border-gray-300 w-full h-full">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                            </select>
+                            <div class='absolute left-[50%] bottom-0 h-full border border-gray-300 w-[0px]'></div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn-peak-red-solid rounded-xl md:me-3 h-12 flex items-center justify-center lg:w-full mt-5 lg:mt-0 order-4 md:order-3">Add To Cart</button>
+                    <button type="button" class="btn-grey-light h-12 flex items-center group order-3 md:order-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" 
+                            stroke-width="1.5" stroke="currentColor" 
+                            class="size-6 group-hover:stroke-white">
+                            <path stroke-linecap="round" stroke-linejoin="round" 
+                                d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+                        </svg>
+                    </button>
+                </form>
+                <div class="grid grid-cols-3 gap-3 mt-10 w-full lg:w-[55%]">
+                    <a href="#" class="aspect-square flex items-center justify-center border border-dark-custom bg-grey-custom rounded-md">
+                        <%= image_tag 'peak.png', class:"w-[80%]" %>
+                    </a>
+
+                    <a href="#" class="aspect-square flex items-center justify-center border border-dark-custom bg-grey-custom rounded-md">
+                        <%= image_tag 'peak.png', class:"w-[80%]" %>
+                    </a>
+
+                    <a href="#" class="aspect-square flex items-center justify-center border border-dark-custom bg-grey-custom rounded-md">
+                        <%= image_tag 'peak.png', class:"w-[80%]" %>
+                    </a>
+                </div>
+                <div class="mt-10">
+                    <p class="font-extralight">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequat. 
+                    </p>
+                </div>
+                <div class="w-full lg:w-[55%] mt-10" data-controller="accordion">
+                    <div id="accordion-open" data-accordion="open">
+                        <h2 id="accordion-open-heading-1">
+                            <button type="button" class="border-t-1 border-black accordion-button-styling" data-accordion-target="#accordion-open-body-1" aria-expanded="false" aria-controls="accordion-open-body-1">
+                                <span class="flex items-center">
+                                    Shipping and Returns
+                                </span>
+                                <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+                                </svg>
+                            </button>
+                        </h2>
+                        <div id="accordion-open-body-1" class="hidden px-5" aria-labelledby="accordion-open-heading-1">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+
+  <!-- RIGHT: Details -->
+  
+</div>
+
+
+<%= render 'shared/recommended_products' %>
+
 
 <%= render 'shared/recommended_products' %>
