--- a/app/views/pages/_blog_show_page.html.erb
+++ b/app/views/pages/_blog_show_page.html.erb
@@ -55,7 +55,7 @@
                             <input type="text" id="comment_last_name" class="md-input-styling peer border border-dark-custom h-[45px] !rounded-lg" placeholder=" ">
                             
                             <label for="comment_last_name" class="floating-label">
-                                First Name
+                                Last Name
                             </label>
                         </div>
                     </div>
