Styling adjsutments and enquiries authorization

--- a/app/views/shared/_recommended_products.html.erb
+++ b/app/views/shared/_recommended_products.html.erb
@@ -4,8 +4,8 @@
     </p>
     <div class="grid grid-cols-4 gap-7">
         <a href="#" class="col-span-4 md:col-span-2 lg:col-span-1">
-            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden">   
-                <%= image_tag 'peak.png', class:"w-3/4" %>
+            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden group">   
+                <%= image_tag 'peak.png', class:"w-3/4 hover-zoom group-hover:scale-110" %>
             </div>
             <p class="product-label">
                 Peak Men Taichi 7.0 Running Shoes - WHITE/RED
@@ -16,8 +16,8 @@
         </a>
 
         <a href="#" class="col-span-4 md:col-span-2 lg:col-span-1">
-            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden">   
-                <%= image_tag 'peak.png', class:"w-3/4" %>
+            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden group">   
+                <%= image_tag 'peak.png', class:"w-3/4 hover-zoom group-hover:scale-110" %>
             </div>
             <p class="product-label">
                 Peak Men Taichi 7.0 Running Shoes - WHITE/RED
@@ -28,8 +28,8 @@
         </a>
 
         <a href="#" class="col-span-4 md:col-span-2 lg:col-span-1">
-            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden">   
-                <%= image_tag 'peak.png', class:"w-3/4" %>
+            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden group">   
+                <%= image_tag 'peak.png', class:"w-3/4 hover-zoom group-hover:scale-110" %>
             </div>
             <p class="product-label">
                 Peak Men Taichi 7.0 Running Shoes - WHITE/RED
@@ -40,8 +40,8 @@
         </a>
 
         <a href="#" class="col-span-4 md:col-span-2 lg:col-span-1">
-            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden">   
-                <%= image_tag 'peak.png', class:"w-3/4" %>
+            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden group">   
+                <%= image_tag 'peak.png', class:"w-3/4 hover-zoom group-hover:scale-110" %>
             </div>
             <p class="product-label">
                 Peak Men Taichi 7.0 Running Shoes - WHITE/RED
