--- a/app/views/pages/_product_index_page.html.erb
+++ b/app/views/pages/_product_index_page.html.erb
@@ -91,8 +91,8 @@
     </div>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-7">
         <a href="#" class="">
-            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden">   
-                <%= image_tag 'peak.png', class:"w-3/4" %>
+            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden group">   
+                <%= image_tag 'peak.png', class:"w-3/4 hover-zoom group-hover:scale-110" %>
             </div>
             <p class="product-label">
                 Peak Men Taichi 7.0 Running Shoes - WHITE/RED
@@ -103,8 +103,8 @@
         </a>
 
          <a href="#" class="">
-            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden">   
-                <%= image_tag 'peak.png', class:"w-3/4" %>
+            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden group">   
+                <%= image_tag 'peak.png', class:"w-3/4 hover-zoom group-hover:scale-110" %>
             </div>
             <p class="product-label">
                 Peak Men Taichi 7.0 Running Shoes - WHITE/RED
@@ -115,8 +115,8 @@
         </a>
 
          <a href="#" class="">
-            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden">   
-                <%= image_tag 'peak.png', class:"w-3/4" %>
+            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden group">   
+                <%= image_tag 'peak.png', class:"w-3/4 hover-zoom group-hover:scale-110" %>
             </div>
             <p class="product-label">
                 Peak Men Taichi 7.0 Running Shoes - WHITE/RED
@@ -127,8 +127,8 @@
         </a>
 
          <a href="#" class="">
-            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden">   
-                <%= image_tag 'peak.png', class:"w-3/4" %>
+            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden group">   
+                <%= image_tag 'peak.png', class:"w-3/4 hover-zoom group-hover:scale-110" %>
             </div>
             <p class="product-label">
                 Peak Men Taichi 7.0 Running Shoes - WHITE/RED
@@ -139,8 +139,8 @@
         </a>
 
          <a href="#" class="">
-            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden">   
-                <%= image_tag 'peak.png', class:"w-3/4" %>
+            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden group">   
+                <%= image_tag 'peak.png', class:"w-3/4 hover-zoom group-hover:scale-110" %>
             </div>
             <p class="product-label">
                 Peak Men Taichi 7.0 Running Shoes - WHITE/RED
@@ -151,8 +151,8 @@
         </a>
 
          <a href="#" class="">
-            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden">   
-                <%= image_tag 'peak.png', class:"w-3/4" %>
+            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden group">   
+                <%= image_tag 'peak.png', class:"w-3/4 hover-zoom group-hover:scale-110" %>
             </div>
             <p class="product-label">
                 Peak Men Taichi 7.0 Running Shoes - WHITE/RED
@@ -163,8 +163,8 @@
         </a>
 
          <a href="#" class="">
-            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden">   
-                <%= image_tag 'peak.png', class:"w-3/4" %>
+            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden group">   
+                <%= image_tag 'peak.png', class:"w-3/4 hover-zoom group-hover:scale-110" %>
             </div>
             <p class="product-label">
                 Peak Men Taichi 7.0 Running Shoes - WHITE/RED
@@ -175,8 +175,8 @@
         </a>
 
          <a href="#" class="">
-            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden">   
-                <%= image_tag 'peak.png', class:"w-3/4" %>
+            <div class="bg-grey-custom flex justify-center items-center h-[300px] lg:h-[400px] rounded-xl overflow-hidden group">   
+                <%= image_tag 'peak.png', class:"w-3/4 hover-zoom group-hover:scale-110" %>
             </div>
             <p class="product-label">
                 Peak Men Taichi 7.0 Running Shoes - WHITE/RED
