--- a/app/views/shared/_navbar_menu.html.erb
+++ b/app/views/shared/_navbar_menu.html.erb
@@ -6,20 +6,152 @@
             </a>
             <div class="ms-7">
                 <ul class="hidden bg-transparent lg:flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
-                    <li>
-                    <a href="#" class="nav-link-styling" aria-current="page">Mens</a>
+                    <li class="group">
+                        <a href="#" class="nav-link-styling">Mens</a>
+                        <div class="pt-5 absolute left-0 w-screen opacity-0 invisible group-hover:visible group-hover:opacity-100 transition-opacity duration-200 z-50">
+                            <div class="w-[75%] mx-auto bg-gray-100 rounded-xl grid grid-cols-5 overflow-hidden">
+                                <div class="flex flex-col aspect-[270/360] max-h-[360px] relative">
+                                    <%= image_tag 'card-1.jpg', class: "w-full h-full object-cover" %>
+                                </div>
+                                <div class="flex flex-col py-5 ps-10">
+                                    <p class="text-xl mt-3 font-medium">Accessories</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                    <li><a href="#" class="link-anim">Bags</a></li>
+                                    <li><a href="#" class="link-anim">Hats</a></li>
+                                    <li><a href="#" class="link-anim">Jewelry</a></li>
+                                    </ul>
+                                </div>
+                                <div class="flex flex-col py-5 ps-10">
+                                    <p class="text-xl mt-3 font-medium">Clothing</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                    <li><a href="#" class="link-anim">Dresses</a></li>
+                                    <li><a href="#" class="link-anim">Tops</a></li>
+                                    <li><a href="#" class="link-anim">Jeans</a></li>
+                                    </ul>
+                                </div>
+                                <div class="flex flex-col py-5 ps-10">
+                                    <p class="text-xl mt-3 font-medium">Shoes</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                    <li><a href="#" class="link-anim">Sneakers</a></li>
+                                    <li><a href="#" class="link-anim">Boots</a></li>
+                                    <li><a href="#" class="link-anim">Sandals</a></li>
+                                    </ul>
+                                </div>
+                                <div class="flex flex-col py-5 ps-10">
+                                    <p class="text-xl mt-3 font-medium">Sale</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                    <li><a href="#" class="link-anim">Clearance</a></li>
+                                    <li><a href="#" class="link-anim">New Arrivals</a></li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </li>
+                    <li class="group">
+                        <a href="#" class="nav-link-styling">Womens</a>
+                        <div class="pt-5 absolute left-0 w-screen opacity-0 invisible group-hover:visible group-hover:opacity-100 transition-opacity duration-200 z-50">
+                            <div class="w-[75%] mx-auto bg-gray-100 rounded-xl grid grid-cols-5 overflow-hidden">
+                                <div class="flex flex-col aspect-[270/360] max-h-[360px] relative">
+                                    <%= image_tag 'card-2.jpg', class: "w-full h-full object-cover" %>
+                                </div>
+                                <div class="flex flex-col py-5 ps-10">
+                                    <p class="text-xl mt-3 font-medium">Accessories</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                    <li><a href="#" class="link-anim">Bags</a></li>
+                                    <li><a href="#" class="link-anim">Hats</a></li>
+                                    <li><a href="#" class="link-anim">Jewelry</a></li>
+                                    </ul>
+                                </div>
+                                <div class="flex flex-col py-5 ps-10">
+                                    <p class="text-xl mt-3 font-medium">Clothing</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                    <li><a href="#" class="link-anim">Dresses</a></li>
+                                    <li><a href="#" class="link-anim">Tops</a></li>
+                                    <li><a href="#" class="link-anim">Jeans</a></li>
+                                    </ul>
+                                </div>
+                                <div class="flex flex-col py-5 ps-10">
+                                    <p class="text-xl mt-3 font-medium">Shoes</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                    <li><a href="#" class="link-anim">Sneakers</a></li>
+                                    <li><a href="#" class="link-anim">Boots</a></li>
+                                    <li><a href="#" class="link-anim">Sandals</a></li>
+                                    </ul>
+                                </div>
+                                <div class="flex flex-col py-5 ps-10">
+                                    <p class="text-xl mt-3 font-medium">Sale</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                    <li><a href="#" class="link-anim">Clearance</a></li>
+                                    <li><a href="#" class="link-anim">New Arrivals</a></li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </li>
+                    <li class="group">
+                        <a href="#" class="nav-link-styling">Apparel</a>
+                        <div class="pt-5 absolute left-0 w-screen opacity-0 invisible group-hover:visible group-hover:opacity-100 transition-opacity duration-200 z-50">
+                            <div class="w-[75%] mx-auto bg-gray-100 rounded-xl grid grid-cols-5 overflow-hidden">
+                                <div class="flex flex-col aspect-[270/360] max-h-[360px] relative">
+                                    <%= image_tag 'card-3.jpg', class: "w-full h-full object-cover" %>
+                                </div>
+                                <div class="flex flex-col py-5 ps-10">
+                                    <p class="text-xl mt-3 font-medium">Accessories</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                    <li><a href="#" class="link-anim">Bags</a></li>
+                                    <li><a href="#" class="link-anim">Hats</a></li>
+                                    <li><a href="#" class="link-anim">Jewelry</a></li>
+                                    </ul>
+                                </div>
+                                <div class="flex flex-col py-5 ps-10">
+                                    <p class="text-xl mt-3 font-medium">Clothing</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                    <li><a href="#" class="link-anim">Dresses</a></li>
+                                    <li><a href="#" class="link-anim">Tops</a></li>
+                                    <li><a href="#" class="link-anim">Jeans</a></li>
+                                    </ul>
+                                </div>
+                                <div class="flex flex-col py-5 ps-10">
+                                    <p class="text-xl mt-3 font-medium">Shoes</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                    <li><a href="#" class="link-anim">Sneakers</a></li>
+                                    <li><a href="#" class="link-anim">Boots</a></li>
+                                    <li><a href="#" class="link-anim">Sandals</a></li>
+                                    </ul>
+                                </div>
+                                <div class="flex flex-col py-5 ps-10">
+                                    <p class="text-xl mt-3 font-medium">Sale</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                    <li><a href="#" class="link-anim">Clearance</a></li>
+                                    <li><a href="#" class="link-anim">New Arrivals</a></li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+
                     </li>
                     <li>
-                    <a href="#" class="nav-link-styling">Womens</a>
+                        <a href="#" class="nav-link-styling">Accessories</a>
                     </li>
                     <li>
-                    <a href="#" class="nav-link-styling">Apparel</a>
-                    </li>
-                    <li>
-                    <a href="#" class="nav-link-styling">Accessories</a>
-                    </li>
-                    <li>
-                    <a href="#" class="nav-link-styling">Blog</a>
+                        <a href="#" class="nav-link-styling">Blog</a>
                     </li>
                 </ul>
             </div>
