--- a/app/views/shared/_navbar_menu.html.erb
+++ b/app/views/shared/_navbar_menu.html.erb
@@ -176,10 +176,10 @@
                 </svg>
             </a>
 
-            <button data-collapse-toggle="navbar-search" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-search" aria-expanded="false">
+            <button data-collapse-toggle="navbar-search" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden bg-dark-custom" aria-controls="navbar-search" aria-expanded="false">
                 <span class="sr-only">Open main menu</span>
                 <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+                    <path stroke="#ffffff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
                 </svg>
             </button>
         </div>
@@ -192,21 +192,69 @@
                 </div>
                 <input type="text" id="search-navbar" class="block w-full p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500" placeholder="Search...">
             </div>
-            <ul class="flex lg:hidden flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 rtl:space-x-reverse">
+            <ul class="flex lg:hidden flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 rtl:space-x-reverse  max-h-[70vh] overflow-y-auto">
                 <li>
-                <a href="#" class="nav-link-styling" aria-current="page">Mens</a>
+                    <div class="w-full lg:w-[55%] mt-5" data-controller="accordion">
+                        <div id="accordion-mobile-open" data-accordion="open">
+                            <h2 id="accordion-open-heading-1">
+                                <button type="button" class="flex flex-row items-center" data-accordion-target="#accordion-mobile-body-1" aria-expanded="false" aria-controls="accordion-open-body-1">
+                                    <span class="flex items-center nav-link-styling">
+                                        Mens
+                                    </span>
+                                    <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+                                    </svg>
+                                </button>
+                            </h2>
+                            <div id="accordion-mobile-body-1" class="hidden" aria-labelledby="accordion-open-heading-1">
+                                <div class="flex flex-col py-2">
+                                    <p class="text-xl mt-5 font-medium">Accessories</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                        <li><a href="#" class="link-anim">Bags</a></li>
+                                        <li><a href="#" class="link-anim">Hats</a></li>
+                                        <li><a href="#" class="link-anim">Jewelry</a></li>
+                                    </ul>
+
+                                    <p class="text-xl mt-5 font-medium">Clothing</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                        <li><a href="#" class="link-anim">Dresses</a></li>
+                                        <li><a href="#" class="link-anim">Tops</a></li>
+                                        <li><a href="#" class="link-anim">Jeans</a></li>
+                                    </ul>
+
+                                    <p class="text-xl mt-5 font-medium">Shoes</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                        <li><a href="#" class="link-anim">Sneakers</a></li>
+                                        <li><a href="#" class="link-anim">Boots</a></li>
+                                        <li><a href="#" class="link-anim">Sandals</a></li>
+                                    </ul>
+
+                                     <p class="text-xl mt-5 font-medium">Sale</p>
+                                    <div class="red-accent-pill w-10 h-1 bg-red-500 rounded mt-2"></div>
+                                    <ul class="mt-2 space-y-1">
+                                        <li><a href="#" class="link-anim">Clearance</a></li>
+                                        <li><a href="#" class="link-anim">New Arrivals</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </li>
                 <li>
-                <a href="#" class="nav-link-styling">Womens</a>
+                    <a href="#" class="nav-link-styling">Womens</a>
                 </li>
                 <li>
-                <a href="#" class="nav-link-styling">Apparel</a>
+                    <a href="#" class="nav-link-styling">Apparel</a>
                 </li>
                 <li>
-                <a href="#" class="nav-link-styling">Accessories</a>
+                    <a href="#" class="nav-link-styling">Accessories</a>
                 </li>
                 <li>
-                <a href="#" class="nav-link-styling">Blog</a>
+                    <a href="#" class="nav-link-styling">Blog</a>
                 </li>
                 <li class="flex flex-row pt-4">
                     <a class="block lg:hidden" href="#">
